--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,22 @@
+asgiref==3.6.0
+branca==0.6.0
+certifi==2022.12.7
+charset-normalizer==3.0.1
+crispy-bootstrap5==0.7
 Django==4.1.7
+django-crispy-forms==2.0
+django-extensions==3.2.1
+django-jazzmin==2.6.0
+django-leaflet==0.28.3
+folium==0.14.0
+googlemaps==4.10.0
+idna==3.4
+install==1.3.5
+Jinja2==3.1.2
+MarkupSafe==2.1.2
+numpy==1.24.2
 psycopg2-binary==2.9.5
 python-dotenv==0.21.1
+requests==2.28.2
+sqlparse==0.4.3
+urllib3==1.26.14
